--- a/ErabliereIU/src/app/client-view/horaire/horaire-form.component.html
+++ b/ErabliereIU/src/app/client-view/horaire/horaire-form.component.html
@@ -21,6 +21,6 @@
     <einput [arialabel]="'Dimanche'" [placeholder]="'HH:mm-HH:mm'" [formGroup]="horaireForm" [name]="'dimanche'" [pattern]="'^\\d{2}:\\d{2}-\\d{2}:\\d{2}$'" [maxlength]="12"></einput>
   </div>
   <div class="form-group">
-    <ebutton type="primary" (clicked)="putHoraire()">Enregistrer</ebutton>
+    <ebutton type="primary" (clicked)="putHoraire()" [inProgress]="modifierHorairePutCallInProgress">Enregistrer</ebutton>
   </div>
 </div>
