interaction modal horaire + forms avec toggle afficher horaire

--- a/ErabliereIU/src/app/client-view/erablieres/modifier-erabliere.component.html
+++ b/ErabliereIU/src/app/client-view/erablieres/modifier-erabliere.component.html
@@ -21,7 +21,7 @@
                     @if (displayHoraireForm)
                     {
                     <emodal [title]="'Modifier Horaire'" (closeModal)="displayHoraireForm = false">
-                        <horaire-form [horaire]="horaire" [erabliereId]="erabliere?.id"></horaire-form>
+                        <horaire-form [horaire]="horaire" [erabliereId]="erabliere?.id" (onHoraireSaved)="onHoraireSaved()"></horaire-form>
                     </emodal>
                     }
                     @else
