--- a/ErabliereIU/src/app/client-view/erablieres/erabliere-form.component.html
+++ b/ErabliereIU/src/app/client-view/erablieres/erabliere-form.component.html
@@ -91,6 +91,11 @@
                     name="afficherSectionDompeux" [(ngModel)]="erabliere.afficherSectionDompeux">
                 <label for="afficherSectionDompeux" class="form-check-label">Afficher section dompeux</label>
             </div>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="afficherSectionHoraire"
+                    name="afficherSectionHoraire" [(ngModel)]="erabliere.afficherSectionHoraire">
+                <label for="afficherSectionHoraire" class="form-check-label">Afficher section horaire</label>
+            </div>
         </div>
         <div class="col-md-6 form-group">
             <label class="form-label" for="indiceOrdre">Numéro ordre</label>
