--- a/ErabliereIU/src/app/client-view/notes/note.component.html
+++ b/ErabliereIU/src/app/client-view/notes/note.component.html
@@ -53,16 +53,16 @@
     </div>
   </div>
 
-  <div class="card-footer">
-    <div class="btn-group me-2">
+  <div class="card-footer" style="padding-bottom: 0;">
+    <div class="btn-group me-2 mb-2">
       <button class="btn btn-info btn-sm" (click)="selectEditNote()">Modifier</button>
     </div>
-    <div class="btn-group me-2">
+    <div class="btn-group me-2 mb-2">
       <button class="btn btn-primary btn-sm" (click)="modifierImage()">Modifier l'image</button>
     </div>
     @if (isAIUser)
     {
-    <div class="btn-group me-2">
+    <div class="btn-group me-2 mb-2">
       <button class="btn btn-secondary btn-sm" (click)="genererUneImageParIA()">
         Générer une image
         @if (isGeneratingImage) {
@@ -71,7 +71,7 @@
       </button>
     </div>
     }
-    <div class="btn-group">
+    <div class="btn-group me-2 mb-2">
       <button class="btn btn-danger btn-sm" (click)="deleteNote()">Supprimer</button>
     </div>
 
