--- a/ErabliereIU/src/generic/erabliereai/window/erabliereai-window.component.html
+++ b/ErabliereIU/src/generic/erabliereai/window/erabliereai-window.component.html
@@ -1,26 +1,28 @@
 <div class="chat-window">
+  @if (isModal) {
   <button type="button" class="btn-close position-absolute top-0 end-0 mt-3 me-3" aria-label="Close"
-  (click)="closeChatWindowEvent.emit(true)"></button>
+    (click)="closeChatWindowEvent.emit(true)"></button>
+  }
   <section class="gradient-custom">
     <div class="container py-5">
       <div class="row">
         <div class="col-md-6 col-lg-5 col-xl-5 mb-4 mb-md-0">
           <h5 class="font-weight-bold mb-3 text-center text-white">Conversation <span
-            style="font-size: 1.2em; cursor: pointer;" (click)="hideDisplaySearch()"
-          (keydown)="keyDownHideDisplaySearch($event)">🔍</span></h5>
+              style="font-size: 1.2em; cursor: pointer;" (click)="hideDisplaySearch()"
+              (keydown)="keyDownHideDisplaySearch($event)">🔍</span></h5>
           @if (displaySearch) {
-            <div class="row">
-              <div class="col-12">
-                <div class="form-outline form-white mb-4">
-                  <label class="form-label text-white" for="form1">Rechercher une conversation</label>
-                  <div class="input-group form-outline">
-                    <input type="text" id="form1" class="form-control" (change)="searchConversation($event)">
-                    <button class="btn btn-light" type="button" id="button-addon2"
+          <div class="row">
+            <div class="col-12">
+              <div class="form-outline form-white mb-4">
+                <label class="form-label text-white" for="form1">Rechercher une conversation</label>
+                <div class="input-group form-outline">
+                  <input type="text" id="form1" class="form-control" (change)="searchConversation($event)">
+                  <button class="btn btn-light" type="button" id="button-addon2"
                     (click)="fetchConversations()">🔍</button>
-                  </div>
                 </div>
               </div>
             </div>
+          </div>
           }
           <div class="card mask-custom">
             <div class="card-body">
@@ -36,43 +38,42 @@
                   </div>
                 </li>
                 @for (conversation of conversations; track conversation) {
-                  <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;"
-                    >
-                    <div class="d-flex justify-content-between link-light" (click)="selectConversation(conversation)"
-                      style="cursor: pointer;">
-                      <div class="d-flex flex-row">
-                        <div class="pt-1">
-                          <p class="small text-white" style="white-space: pre-wrap; word-wrap: break-word;">
-                            {{ elispseText(conversation.name ?? '', 100) }}
-                          </p>
-                        </div>
+                <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;">
+                  <div class="d-flex justify-content-between link-light" (click)="selectConversation(conversation)"
+                    style="cursor: pointer;" (keyup)="keyUpSelectConversation($event, conversation)">
+                    <div class="d-flex flex-row">
+                      <div class="pt-1">
+                        <p class="small text-white" style="white-space: pre-wrap; word-wrap: break-word;">
+                          {{ elispseText(conversation.name ?? '', 100) }}
+                        </p>
                       </div>
                     </div>
-                    <div class="d-flex justify-content-between">
-                      <span class="small text-white">
-                        {{ conversation.isPublic ? '👥 ' : '🔒 '}}
-                        {{ conversation.lastMessageDate != null ? formatMessageDate(conversation.lastMessageDate) :
-                        'Inconnu' }}
-                      </span>
-                      <span (click)="deleteConversation(conversation)" class="text-danger" style="cursor: pointer;"
-                      data-bs-toggle="tooltip" data-bs-placement="top" title="Supprimer la conversation">X</span>
-                    </div>
-                  </li>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <span class="small text-white">
+                      {{ conversation.isPublic ? '👥 ' : '🔒 '}}
+                      {{ conversation.lastMessageDate != null ? formatMessageDate(conversation.lastMessageDate) :
+                      'Inconnu' }}
+                    </span>
+                    <span (click)="deleteConversation(conversation)" class="text-danger" style="cursor: pointer;"
+                      data-bs-toggle="tooltip" data-bs-placement="top" title="Supprimer la conversation"
+                      (keyup)="keyUpDeleteConversation($event, conversation)">X</span>
+                  </div>
+                </li>
                 }
                 @if (conversations.length >= top + skip) {
-                  <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;"
-                    >
-                    <div class="d-flex justify-content-center">
-                      <div class="d-flex justify-content-between link-light" (click)="loadMore()"
-                        style="cursor: pointer;">
-                        <div class="d-flex flex-row">
-                          <div class="pt-1">
-                            <p class="small text-white">Charger plus de conversation</p>
-                          </div>
+                <li class="p-2 border-bottom" style="border-bottom: 1px solid rgba(255,255,255,.3) !important;">
+                  <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-between link-light" (click)="loadMore()"
+                      style="cursor: pointer;" (keydown)="keyDownLoadMore($event)">
+                      <div class="d-flex flex-row">
+                        <div class="pt-1">
+                          <p class="small text-white">Charger plus de conversation</p>
                         </div>
                       </div>
                     </div>
-                  </li>
+                  </div>
+                </li>
                 }
               </ul>
             </div>
@@ -81,40 +82,41 @@
 
         <div class="col-md-6 col-lg-7 col-xl-7">
           @if (currentConversation) {
-            <div class="mb-3 d-flex align-items-center">
-              <span class="text-white me-2">
-                <strong>{{ currentConversation.isPublic ? '👥' : '🔒' }}</strong>
-              </span>
-              <button class="btn btn-sm btn-secondary" (click)="toggleVisibilityCurrentConversation()">
-                {{ currentConversation.isPublic ? 'Rendre privée 🔒' : 'Rendre publique 👥' }}
-              </button>
-              @if (currentConversation.isPublic)
-                {
-                <button class="btn btn-sm btn-primary ms-2" (click)="copyShareLink()">
-                  Copier le lien de partage 🔗
-                </button>
-              }
-            </div>
+          <div class="mb-3 d-flex align-items-center">
+            <span class="text-white me-2">
+              <strong>{{ currentConversation.isPublic ? '👥' : '🔒' }}</strong>
+            </span>
+            <button class="btn btn-sm btn-secondary" (click)="toggleVisibilityCurrentConversation()">
+              {{ currentConversation.isPublic ? 'Rendre privée 🔒' : 'Rendre publique 👥' }}
+            </button>
+            @if (currentConversation.isPublic)
+            {
+            <button class="btn btn-sm btn-primary ms-2" (click)="copyShareLink()">
+              Copier le lien de partage 🔗
+            </button>
+            }
+          </div>
           }
 
           @if (currentConversation)
-            {
-            <erabliereai-message-list [enableTranslation]="true" [conversation]="currentConversation" [messages]="messages"></erabliereai-message-list>
+          {
+          <erabliereai-message-list [enableTranslation]="true" [conversation]="currentConversation"
+            [messages]="messages"></erabliereai-message-list>
           }
 
           @if (aiIsThinking) {
-            <div>
-              <div class="spinner-border text-success">
-                <span class="visually-hidden">Pensif...</span>
-              </div>
-              <p class="text-white">ÉrabliereAI réfléchit...</p>
+          <div>
+            <div class="spinner-border text-success">
+              <span class="visually-hidden">Pensif...</span>
             </div>
+            <p class="text-white">ÉrabliereAI réfléchit...</p>
+          </div>
           }
 
 
           <div class="form-outline form-white">
             <textarea class="form-control" id="textAreaExample3" rows="4"
-            (change)="updateNewMessage($event)"></textarea>
+              (change)="updateNewMessage($event)"></textarea>
             <label class="form-label text-white" for="textAreaExample3">Message</label>
           </div>
 
@@ -131,24 +133,24 @@
             </div>
             <div class="col-8">
               @if (typePrompt == 'Chat') {
-                <button class="btn" style="margin-top: 15px;" (click)="toggleChatConfig()"
-                  title="Modifier la phrase système">
-                  <span style="font-size: 2em;">⚙️</span>
-                </button>
+              <button class="btn" style="margin-top: 15px;" (click)="toggleChatConfig()"
+                title="Modifier la phrase système">
+                <span style="font-size: 2em;">⚙️</span>
+              </button>
               }
               <div class="btn-group float-end float-bottom">
                 <button type="button" class="btn btn-light btn-rounded" (click)="sendMessage()">📤 Envoyer</button>
               </div>
             </div>
             @if (chatConfig) {
-              <div class="form-outline form-white">
-                <label class="form-label text-white" for="textAreaExample3">Phrase système</label>
-                <textarea class="form-control" id="textAreaExample3" rows="4" (change)="updateChatConfig($event)"
-                  [value]="currentSystemPhrase">
+            <div class="form-outline form-white">
+              <label class="form-label text-white" for="textAreaExample3">Phrase système</label>
+              <textarea class="form-control" id="textAreaExample3" rows="4" (change)="updateChatConfig($event)"
+                [value]="currentSystemPhrase">
                 </textarea>
-                <!-- Ajouter un bouton pour remettre la phrase par défaut -->
-                <button class="btn btn-light mt-1" (click)="resetChatConfig()">Remettre par défaut</button>
-              </div>
+              <!-- Ajouter un bouton pour remettre la phrase par défaut -->
+              <button class="btn btn-light mt-1" (click)="resetChatConfig()">Remettre par défaut</button>
+            </div>
             }
           </div>
         </div>
