--- a/ErabliereIU/src/app/client-view/notes/note.component.html
+++ b/ErabliereIU/src/app/client-view/notes/note.component.html
@@ -72,7 +72,7 @@
     </div>
     }
     <div class="btn-group me-2 mb-2">
-      <button class="btn btn-danger btn-sm" (click)="deleteNote()">Supprimer</button>
+      <ebutton type="danger" size="sm" (clicked)="deleteNote()" [inProgress]="isDeletingNote">Supprimer</ebutton>
     </div>
 
     @if (actionError) {
