--- a/ErabliereIU/src/app/client-view/notes/note.component.html
+++ b/ErabliereIU/src/app/client-view/notes/note.component.html
@@ -54,26 +54,13 @@
   </div>
 
   <div class="card-footer" style="padding-bottom: 0;">
-    <div class="btn-group me-2 mb-2">
-      <button class="btn btn-info btn-sm" (click)="selectEditNote()">Modifier</button>
-    </div>
-    <div class="btn-group me-2 mb-2">
-      <button class="btn btn-primary btn-sm" (click)="modifierImage()">Modifier l'image</button>
-    </div>
+    <ebutton class="btn-group me-2 mb-2" type="info" size="sm" (clicked)="selectEditNote()">Modifier</ebutton>
+    <ebutton class="btn-group me-2 mb-2" type="primary" size="sm" (clicked)="modifierImage()">Modifier l'image</ebutton>
     @if (isAIUser)
     {
-    <div class="btn-group me-2 mb-2">
-      <button class="btn btn-secondary btn-sm" (click)="genererUneImageParIA()">
-        Générer une image
-        @if (isGeneratingImage) {
-        <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
-        }
-      </button>
-    </div>
+    <ebutton class="btn-group me-2 mb-2" type="secondary" size="sm" (clicked)="genererUneImageParIA()" [inProgress]="isGeneratingImage">Générer une image</ebutton>
     }
-    <div class="btn-group me-2 mb-2">
-      <ebutton type="danger" size="sm" (clicked)="deleteNote()" [inProgress]="isDeletingNote">Supprimer</ebutton>
-    </div>
+    <ebutton class="btn-group me-2 mb-2" type="danger" size="sm" (clicked)="deleteNote()" [inProgress]="isDeletingNote">Supprimer</ebutton>
 
     @if (actionError) {
     <div class="row">
