--- a/ErabliereIU/src/generic/modal/emodal.component.html
+++ b/ErabliereIU/src/generic/modal/emodal.component.html
@@ -1,4 +1,4 @@
-<div class="modal" style="display: block;">
+<div class="modal modal-backdrop" style="display: block;">
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
