--- a/ErabliereIU/src/app/client-view/rappel/modal-rappel/modal-rappel.component.html
+++ b/ErabliereIU/src/app/client-view/rappel/modal-rappel/modal-rappel.component.html
@@ -1,5 +1,5 @@
 
-<div class="modal" style="display: block;">
+<div class="modal modal-backdrop" style="display: block;">
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
