--- a/ErabliereIU/src/styles.css
+++ b/ErabliereIU/src/styles.css
@@ -268,6 +268,16 @@
   margin-bottom: 7px;
 }
 
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.5); /* noir semi-transparent */
+  z-index: 10; /* derrière la modal mais devant le reste */
+}
+
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
   .modal-content {
