--- a/ErabliereIU/src/app/client-view/appareil/appareils.component.html
+++ b/ErabliereIU/src/app/client-view/appareil/appareils.component.html
@@ -1,7 +1,41 @@
-@if (appareils.length === 0) {
-    <p>Aucun appareil détecté.</p>
+<h3>Appareils</h3>
+
+@if (appareils?.length === 0) {
+<p>Aucun appareil détecté.</p>
 }
 
+<div class="row">
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-body">
+                <p>Pour lancer un scan nmap (exemple): nmap -sV 192.168.1.0/24 -oX result.xml</p>
+                <p>Ensuite importer le fichier result.xml via l'api ou le bouton de cette page.</p>
+                @if ((appareils ?? []).length > 0) {
+                <p>Pour supprimer tous les appareils, cliquez sur le bouton ci-dessous.</p>
+                }
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-6">
+        <ebutton type="primary" size="sm" (clicked)="importerScanNmap()" [inProgress]="loadingNmapResultInProgress">
+            Importer un fichier nmap
+        </ebutton>
+
+        @if ((appareils ?? []).length > 0) {
+        <ebutton type="danger" size="sm" (clicked)="supprimerTousLesAppareils()"
+            [inProgress]="deleteAppareilInProgress">
+            Supprimer tous les appareils
+        </ebutton>
+        }
+    </div>
+</div>
+
+@if (loadingInProgress)
+{
+<p>Chargement en cours...</p>
+}
+@else {
 <table class="table table-responsive">
     <thead>
         <tr>
@@ -15,34 +49,35 @@
     </thead>
     <tbody>
         @for (appareil of appareils; track appareil.id) {
-            <tr>
-                <td><copy-id-button [id]="appareil.id"></copy-id-button></td>
-                <td>{{ appareil.name }}</td>
-                <td>
-                    {{ appareil.statut?.etat }} {{ appareil.statut?.raison }}
-                </td>
-                <td>
-                    <ul>
-                        @for (adresse of appareil.adresses; track adresse.id) {
-                            <li>{{ adresse.addr }} ({{ adresse.addrtype }})</li>
-                        }
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        @for (port of appareil.ports; track port.id) {
-                            <li>{{ port.port }} ({{ port.protocol }})</li>
-                        }
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        @for (nomHost of appareil.nomsHost; track nomHost.id) {
-                            <li>{{ nomHost.name }} ({{ nomHost.type }})</li>
-                        }
-                    </ul>
-                </td>
-            </tr>
+        <tr>
+            <td><copy-id-button [id]="appareil.id"></copy-id-button></td>
+            <td>{{ appareil.name }}</td>
+            <td>
+                {{ appareil.statut?.etat }} {{ appareil.statut?.raison }}
+            </td>
+            <td>
+                <ul>
+                    @for (adresse of appareil.adresses; track adresse.id) {
+                    <li>{{ adresse.addr }} ({{ adresse.addrtype }})</li>
+                    }
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    @for (port of appareil.ports; track port.id) {
+                    <li>{{ port.port }} ({{ port.protocol }})</li>
+                    }
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    @for (nomHost of appareil.nomsHost; track nomHost.id) {
+                    <li>{{ nomHost.name }} ({{ nomHost.type }})</li>
+                    }
+                </ul>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
+}
