minimal ui for ipinfo challenge

--- a/ErabliereIU/src/app/admin-view/admin-nav-bar/admin-nav-bar.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-nav-bar/admin-nav-bar.component.html
@@ -31,6 +31,11 @@
                         Clé de tunnel Hologram
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/a/ipinfos" routerLinkActive="active" ariaCurrentWhenActive="page">
+                        Ip Infos
+                    </a>
+                </li>
             </ul>
             <div class="d-flex gap-2">
                 <button id="zone-admin-button" class="btn btn-outline-primary" routerLink="">ÉrablièreIU</button>
