--- a/ErabliereIU/src/app/admin-view/admin/admin-ipinfos/admin-ipinfos.component.html
+++ b/ErabliereIU/src/app/admin-view/admin/admin-ipinfos/admin-ipinfos.component.html
@@ -32,6 +32,8 @@
             </div>
         </div>
 
+        <app-ipinfo-map [ipInfos]="ipInfos"></app-ipinfo-map>
+
         <app-ipinfo-list [ipInfos]="ipInfos"></app-ipinfo-list>
     </div>
 </div>
