--- a/ErabliereIU/src/app/client-view/appareil/appareils.component.html
+++ b/ErabliereIU/src/app/client-view/appareil/appareils.component.html
@@ -40,7 +40,8 @@
     <thead>
         <tr>
             <th>Appareil ID</th>
-            <th>Nom</th>
+            <th>IP</th>
+            <th>Description</th>
             <th>Statut</th>
             <th>Adresses</th>
             <th>Port</th>
@@ -52,13 +53,14 @@
         <tr>
             <td><copy-id-button [id]="appareil.id"></copy-id-button></td>
             <td>{{ appareil.name }}</td>
+            <td>{{ appareil.description }}</td>
             <td>
-                {{ appareil.statut?.etat }} {{ appareil.statut?.raison }}
+                {{ appareil.statut?.etat }} {{ appareil.statut?.raison }} TTL: {{ appareil.statut?.raisonTTL }}
             </td>
             <td>
                 <ul>
                     @for (adresse of appareil.adresses; track adresse.id) {
-                    <li>{{ adresse.addr }} ({{ adresse.addrtype }})</li>
+                    <li>{{ adresse.addr }} ({{ adresse.addrtype }}) {{ adresse.vendeur }}</li>
                     }
                 </ul>
             </td>
