start coloring the map

--- a/ErabliereIU/src/app/admin-view/admin/admin-customers/admin-customers.component.html
+++ b/ErabliereIU/src/app/admin-view/admin/admin-customers/admin-customers.component.html
@@ -7,7 +7,7 @@
       (needToUpdate)="terminerModiferCustomer($event)">
     </modifier-customer-modal>
     }
-    <div class="container-fluid">
+    <div>
         <customer-list
           [customers]="customers"
           (customerASupprimer)="supprimerCustomer($event)"
