--- a/ErabliereIU/src/app/admin-view/admin/admin-hologram/admin-hologram.component.html
+++ b/ErabliereIU/src/app/admin-view/admin/admin-hologram/admin-hologram.component.html
@@ -2,7 +2,7 @@
     <h3>Hologram Tunnel Keys</h3>
     <hr />
 
-    <div class="container-fluid">
+    <div>
         <tunnel-keys-table
             [tunnelKeys]="keys"
             (enabletunnelkeys)="enabletunnelkeys($event)"
