--- a/ErabliereIU/src/app/admin-view/admin/admin-erablieres/admin-erablieres.component.html
+++ b/ErabliereIU/src/app/admin-view/admin/admin-erablieres/admin-erablieres.component.html
@@ -8,7 +8,7 @@
         </modifier-erabliere-modal>
     }
 
-    <div class="container-fluid">
+    <div>
         <div class="row">
             <div class="col-12 col mb-2">
                 <input
