--- a/ErabliereIU/src/app/admin-view/admin/admin-ipinfos/admin-ipinfos.component.html
+++ b/ErabliereIU/src/app/admin-view/admin/admin-ipinfos/admin-ipinfos.component.html
@@ -2,7 +2,7 @@
     <h3>Ip Infos</h3>
     <hr />
 
-    <div class="container-fluid">
+    <div>
         @if (generalError) {
         <div class="alert alert-danger" role="alert">
             {{ generalError }}
