clean some code

--- a/ErabliereIU/src/app/admin-view/admin/admin-ipinfos/admin-ipinfos.component.html
+++ b/ErabliereIU/src/app/admin-view/admin/admin-ipinfos/admin-ipinfos.component.html
@@ -34,6 +34,6 @@
 
         <app-ipinfo-map [ipInfos]="ipInfos"></app-ipinfo-map>
 
-        <app-ipinfo-list [ipInfos]="ipInfos"></app-ipinfo-list>
+        <app-ipinfo-list [ipInfos]="ipInfos" [authorizeCountryCode]="authorizeCountries"></app-ipinfo-list>
     </div>
 </div>
