add local, fix bug terminate note without peridicity

--- a/ErabliereIU/src/app/ai-view/ai-nav-bar/ai-nav-bar.component.html
+++ b/ErabliereIU/src/app/ai-view/ai-nav-bar/ai-nav-bar.component.html
@@ -19,8 +19,7 @@
                 <button id="zone-carte-button" class="btn btn-primary" routerLink="/map"><span>🗺️ </span>Carte</button>
                 }
                 @if (!useAuthentication || isAdminUser) {
-                <button id="zone-admin-button" class="btn btn-primary" routerLink="/a"><span>⚙️ </span>Érablière
-                    Admin</button>
+                <button id="zone-admin-button" class="btn btn-primary" routerLink="/a"><span>⚙️ </span>Admin</button>
                 }
                 @if (useAuthentication) {
                 <connection-button (loginChange)="onLoginChange($event)" />
