--- a/ErabliereIU/src/app/client-view/notes/note.component.html
+++ b/ErabliereIU/src/app/client-view/notes/note.component.html
@@ -76,7 +76,7 @@
   </div>
 
   @if (displayImageModal) {
-  <div class="modal" style="display: block;">
+  <div class="modal modal-backdrop" style="display: block;">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
